test : Cars 클래스 테스트코드 수정
- Car객체의 Position 값을 증가 시키는 로직을 포함하여 좀 더 정확한 테스트가 가능하도록 수정함.