@@ -2,13 +2,22 @@ package racingcar.domain;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
-import static org.junit.jupiter.api.Assertions.*;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
 class CarsTest {
+
+    private final String[] carArray = {"벤츠", "아우디", "BMW", "페라리"};
+    private Cars cars;
+
+    @BeforeEach
+    void beforeEach() {
+        cars = new Cars(carArray);
+    }
 
     @Test
     void 중복된_자동차_이름_확인() {
@@ -20,17 +29,17 @@ class CarsTest {
 
     @Test
     void 가장_멀리있는_자동차_위치_확인() {
-        String[] carArray = {"벤츠", "아우디", "BMW", "페라리"};
-        List<String> carList = new ArrayList<>(List.of(carArray));
-        Cars cars = new Cars(carArray);
-        assertThat(cars.getMaxPosition()).isEqualTo(0);
+        cars.moveCar(1);
+        cars.moveCar(1);
+        assertThat(cars.getMaxPosition()).isEqualTo(2);
 
     }
+
     @Test
     void 우승_자동차_확인() {
-        String[] carArray = {"벤츠", "아우디", "BMW", "페라리"};
-        List<String> carList = new ArrayList<>(List.of(carArray));
-        Cars cars = new Cars(carArray);
-        assertThat(cars.getVictoryCarsName()).isEqualTo(carList);
+        cars.moveCar(0);
+        cars.moveCar(1);
+        List<String> resultCarlist = new ArrayList<>(Arrays.asList("벤츠", "아우디"));
+        assertThat(cars.getVictoryCarsName()).isEqualTo(resultCarlist);
     }
 }
